--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "postcss-pxtorem": "^6.1.0",
     "sass": "^1.92.1",
     "vite": "^7.1.4"
+  },
+  "dependencies": {
+    "swiper": "^11.2.10"
   }
 }
